[project]
name = "patent-agent"
version = "0.1.0"
description = "특허 심사대응 AI Agent"
requires-python = ">=3.10"
dependencies = [
    "dspy>=2.6",
    "pydantic>=2.0",
    "anthropic>=0.40.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langfuse>=3.0",
    "openinference-instrumentation-dspy>=0.1",
    "opentelemetry-sdk>=1.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
